--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Pesquisa Spotify</title>
   <style>
-    /* Reset básico */
     * {
       box-sizing: border-box;
     }
@@ -19,7 +18,6 @@
       flex-direction: column;
     }
 
-    /* Banner topo e rodapé */
     .banner {
       background-color: #1DB954;
       color: white;
@@ -32,7 +30,6 @@
       user-select: none;
     }
 
-    /* Área principal com scroll */
     .main-content {
       flex: 1;
       overflow-y: auto;
@@ -42,7 +39,6 @@
       padding: 20px;
     }
 
-    /* Card da pesquisa */
     .card {
       background-color: white;
       border-radius: 12px;
@@ -71,6 +67,7 @@
       border-radius: 20px;
       font-weight: bold;
       font-size: 1rem;
+      min-width: 80px;
     }
 
     .profile-img {
@@ -91,6 +88,8 @@
       font-size: 1.1rem;
       color: green;
       font-weight: bold;
+      min-height: 36px;
+      line-height: 36px;
     }
 
     .question {
@@ -153,15 +152,6 @@
       background-color: #1e8449;
     }
 
-    /* Scrollbar estilo básico */
-    .main-content::-webkit-scrollbar {
-      width: 8px;
-    }
-    .main-content::-webkit-scrollbar-thumb {
-      background-color: rgba(29, 185, 84, 0.5);
-      border-radius: 4px;
-    }
-
     @media (max-width: 400px) {
       .card {
         padding: 15px;
@@ -184,12 +174,12 @@
     <div class="card">
       <div class="header">
         <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/Spotify_logo_with_text.svg" alt="Spotify Logo" />
-        <span id="rewardValue">R$ 492,00</span>
+        <span id="totalReward">R$ 0,00</span>
       </div>
 
       <img class="profile-img" src="https://i.imgur.com/NlX46dN.jpg" alt="Matuê" />
 
-      <div id="rewardBox" class="reward-box">Você recebeu: R$ 492,00</div>
+      <div id="rewardBox" class="reward-box">&nbsp;</div>
 
       <div id="questionContainer" class="question">Carregando pergunta...</div>
 
@@ -233,64 +223,60 @@
     }
   ];
 
+  const minTotal = 321.00;
+  const maxTotal = 367.00;
+
   let currentQuestion = 0;
   let selectedOption = null;
+  let totalReward = 0;
 
   const questionContainer = document.getElementById("questionContainer");
   const buttonsContainer = document.getElementById("buttonsContainer");
   const submitBtn = document.getElementById("submitBtn");
   const rewardBox = document.getElementById("rewardBox");
-  const rewardValueSpan = document.getElementById("rewardValue");
+  const totalRewardSpan = document.getElementById("totalReward");
 
-  function getRandomReward() {
-    return (Math.floor(Math.random() * (498 - 492 + 1)) + 492).toFixed(2);
+  // Função para gerar valor random entre min e max (float com 2 casas)
+  function randomBetween(min, max) {
+    return +(Math.random() * (max - min) + min).toFixed(2);
   }
 
-  function loadQuestion(index) {
-    const q = questions[index];
-    questionContainer.textContent = q.text;
-    buttonsContainer.innerHTML = "";
-    selectedOption = null;
+  // Calcula os ganhos para as perguntas exceto a última, para garantir total dentro da faixa
+  function calcularGanhos() {
+    const numPerguntas = questions.length;
+    const ganhos = [];
+    let acumulado = 0;
 
-    q.options.forEach((option, i) => {
-      const btn = document.createElement("button");
-      btn.textContent = option;
-      btn.className = "btn-" + ((i % 3) + 1);
-      btn.onclick = () => selectOption(option, btn);
-      buttonsContainer.appendChild(btn);
-    });
-  }
-
-  function selectOption(option, btn) {
-    selectedOption = option;
-    Array.from(buttonsContainer.children).forEach(b => b.classList.remove("selected"));
-    btn.classList.add("selected");
-  }
-
-  submitBtn.addEventListener("click", () => {
-    if (!selectedOption) {
-      alert("Por favor, selecione uma opção antes de continuar.");
-      return;
+    // Para as N-1 primeiras perguntas
+    for(let i=0; i < numPerguntas - 1; i++) {
+      // Vamos dar ganhos aleatórios entre 35 e 48
+      let valor = randomBetween(35, 48);
+      ganhos.push(valor);
+      acumulado += valor;
     }
 
-    const valor = getRandomReward();
-    rewardBox.textContent = `Você recebeu: R$ ${valor}`;
-    rewardValueSpan.textContent = `R$ ${valor}`;
+    // Último ganho ajustado pra fechar total entre minTotal e maxTotal
+    // Limite superior para o último ganho:
+    let ultimoMin = Math.max(35, minTotal - acumulado);
+    let ultimoMax = Math.min(48, maxTotal - acumulado);
 
-    currentQuestion++;
-    if (currentQuestion < questions.length) {
-      loadQuestion(currentQuestion);
-    } else {
-      questionContainer.textContent = "Obrigado por participar da pesquisa!";
-      buttonsContainer.innerHTML = "";
-      submitBtn.style.display = "none";
+    // Se ultrapassou maxTotal (ou seja, acumulado já > maxTotal-35), ajusta tudo proporcionalmente:
+    if (ultimoMax < ultimoMin) {
+      // Ajuste proporcional para todos os ganhos para caber na faixa
+      const fator = (maxTotal - 35) / acumulado;
+      for(let i=0; i < ganhos.length; i++) ganhos[i] = +(ganhos[i] * fator).toFixed(2);
+      acumulado = ganhos.reduce((a,b) => a+b, 0);
+      ultimoMin = 35;
+      ultimoMax = maxTotal - acumulado;
     }
-    selectedOption = null;
-  });
 
-  // Inicia com a primeira pergunta
-  loadQuestion(currentQuestion);
-</script>
+    let ultimoValor = randomBetween(ultimoMin, ultimoMax);
+    ganhos.push(ultimoValor);
+    acumulado += ultimoValor;
 
-</body>
-</html>
+    // Ajusta acumulado para 2 casas decimais e retorna array
+    totalReward = +acumulado.toFixed(2);
+    return ganhos;
+  }
+
+  const ganhosPorPergunta
