--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SpotifyPesquisa</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+    
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: 'Montserrat', Arial, sans-serif;
       background-color: #f2f2f2;
       display: flex;
       flex-direction: column;
       min-height: 100vh;
       text-align: center;
       padding: 0;
+      color: #1a1a1a;
     }
     .banner {
       background-color: #1DB954;
       color: white;
-      font-weight: bold;
-      font-size: 1.8em;
+      font-weight: 900;
+      font-size: 2em;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -28,16 +31,18 @@
       position: sticky;
       top: 0;
       z-index: 10;
+      letter-spacing: 2px;
     }
     .banner span.total {
       margin-left: 20px;
-      font-size: 1em;
-      font-weight: normal;
-      background: rgba(255 255 255 / 0.2);
-      padding: 6px 15px;
-      border-radius: 20px;
-      min-width: 100px;
+      font-size: 1.2em;
+      font-weight: 700;
+      background: rgba(255 255 255 / 0.3);
+      padding: 8px 20px;
+      border-radius: 25px;
+      min-width: 120px;
       text-align: center;
+      box-shadow: 0 0 8px rgba(255 255 255, 0.6);
     }
     .content {
       flex-grow: 1;
@@ -49,116 +54,162 @@
     }
     .card {
       background-color: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      border-radius: 18px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
       width: 320px;
-      padding: 20px;
+      padding: 25px 20px 35px;
       text-align: center;
+      transition: transform 0.3s ease;
+    }
+    .card:hover {
+      transform: scale(1.03);
+      box-shadow: 0 12px 28px rgba(0,0,0,0.25);
     }
     .header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 10px;
+      margin-bottom: 12px;
     }
     .header img.logo {
-      height: 24px;
+      height: 28px;
+      filter: drop-shadow(0 0 1px rgba(0,0,0,0.3));
+    }
+    #perguntaIndex {
+      font-weight: 700;
+      font-size: 1.1em;
+      color: #2c662d;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
     }
     .profile-img {
-      width: 120px;
-      border-radius: 10px;
-      margin: 15px auto 25px;
+      width: 130px;
+      border-radius: 14px;
+      margin: 20px auto 30px;
       display: block;
       object-fit: cover;
-      height: 120px;
+      height: 130px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.12);
+      transition: box-shadow 0.3s ease;
+    }
+    .profile-img:hover {
+      box-shadow: 0 8px 20px #1DB954;
     }
     .reward-box {
       background-color: #fffbe6;
-      border: 2px solid #ffd700;
-      border-radius: 12px;
-      padding: 15px;
-      margin-bottom: 20px;
+      border: 2.5px solid #ffd700;
+      border-radius: 16px;
+      padding: 18px;
+      margin-bottom: 25px;
       display: none;
       align-items: center;
       justify-content: center;
-      gap: 10px;
-      font-weight: bold;
-      color: green;
+      gap: 14px;
+      font-weight: 800;
+      color: #2e7d32;
+      font-size: 1.3em;
+      user-select: none;
     }
     .reward-box img {
-      width: 30px;
-      height: 30px;
+      width: 36px;
+      height: 36px;
     }
     .question {
-      font-weight: bold;
-      margin-bottom: 15px;
-      min-height: 48px;
-      font-size: 1.1em;
+      font-weight: 900;
+      margin-bottom: 20px;
+      min-height: 52px;
+      font-size: 1.2em;
+      color: #1b5e20;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.1);
     }
     .buttons {
-      margin-bottom: 25px;
+      margin-bottom: 30px;
+      display: flex;
+      justify-content: center;
+      gap: 14px;
+      flex-wrap: wrap;
     }
     .buttons button {
-      padding: 10px 20px;
-      margin: 6px;
+      padding: 12px 25px;
       border: none;
-      border-radius: 8px;
-      font-weight: bold;
+      border-radius: 30px;
+      font-weight: 900;
       color: white;
       cursor: pointer;
-      font-size: 0.9em;
-      transition: background-color 0.3s;
-      min-width: 85px;
+      font-size: 1em;
+      transition: background-color 0.3s, box-shadow 0.3s;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.15);
+      flex: 1 1 120px;
+      max-width: 140px;
+      user-select: none;
+    }
+    .buttons button:hover:not(:disabled) {
+      box-shadow: 0 6px 16px rgba(0,0,0,0.3);
     }
     .btn-under-18 {
-      background-color: #2ecc71;
+      background: linear-gradient(45deg, #27ae60, #2ecc71);
+      text-shadow: 0 1px 3px rgba(0,0,0,0.4);
     }
     .btn-over-18 {
-      background-color: #27ae60;
+      background: linear-gradient(45deg, #145214, #1b5e20);
+      text-shadow: 0 1px 4px rgba(0,0,0,0.6);
     }
     .btn-maybe {
-      background-color: #f39c12;
+      background: linear-gradient(45deg, #f39c12, #f1c40f);
+      color: #2c3e50;
+      text-shadow: 0 1px 1px rgba(255,255,255,0.7);
     }
     .submit-btn {
-      background-color: green;
+      background: linear-gradient(45deg, #1DB954, #27ae60);
       color: white;
-      padding: 12px 20px;
+      padding: 14px 0;
       border: none;
-      border-radius: 8px;
-      font-size: 16px;
-      font-weight: bold;
+      border-radius: 30px;
+      font-size: 18px;
+      font-weight: 900;
       cursor: pointer;
       width: 100%;
+      box-shadow: 0 5px 15px rgba(39,174,96,0.7);
+      transition: background-color 0.4s, box-shadow 0.4s;
+      user-select: none;
     }
     .submit-btn:disabled {
-      background-color: #7fbc87;
+      background-color: #8fbc8f;
+      box-shadow: none;
       cursor: default;
     }
+    .submit-btn:not(:disabled):hover {
+      background-color: #21bf55;
+      box-shadow: 0 8px 24px rgba(39,174,96,0.9);
+    }
     .banner.rodape {
-      height: 12vh;
-      line-height: 12vh;
-      font-size: 1.5em;
+      height: 10vh;
+      line-height: 10vh;
+      font-size: 1.6em;
       user-select: none;
+      background-color: #1DB954;
+      color: white;
+      font-weight: 900;
+      letter-spacing: 2px;
     }
 
     /* Mobile responsiveness */
     @media (max-width: 400px) {
       .card {
         width: 90vw;
-        padding: 15px;
+        padding: 20px 15px 30px;
       }
       .buttons button {
-        min-width: 70px;
-        font-size: 0.85em;
-        padding: 8px 14px;
-        margin: 4px;
+        max-width: 100%;
+        flex: 1 1 100%;
+        font-size: 1em;
+        padding: 14px 0;
       }
       .submit-btn {
-        font-size: 14px;
-        padding: 10px 15px;
+        font-size: 16px;
+        padding: 14px 0;
       }
       .banner {
-        font-size: 1.5em;
+        font-size: 1.6em;
       }
     }
   </style>
@@ -171,15 +222,15 @@
   </div>
 
   <div class="content">
-    <div class="card">
+    <div class="card" role="main" aria-live="polite" aria-atomic="true">
       <div class="header">
         <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/2/26/Spotify_logo_with_text.svg" alt="Spotify Logo" />
-        <span id="perguntaIndex">Pergunta 1/7</span>
+        <span id="perguntaIndex" aria-label="Número da pergunta">Pergunta 1/7</span>
       </div>
 
       <img class="profile-img" id="artistImg" src="" alt="Imagem do artista" />
 
-      <div class="reward-box" id="rewardBox">
+      <div class="reward-box" id="rewardBox" role="alert" aria-live="assertive">
         <img src="https://cdn-icons-png.flaticon.com/512/138/138292.png" alt="Moedas" />
         <p>Você ganhou:</p>
         <h2 id="valorGanhos">R$ 0,00</h2>
@@ -187,7 +238,7 @@
 
       <div class="question" id="questionText"></div>
 
-      <div class="buttons" id="buttonsArea"></div>
+      <div class="buttons" id="buttonsArea" role="group" aria-label="Opções de resposta"></div>
 
       <button class="submit-btn" id="submitBtn" disabled>Enviar respostas</button>
     </div>
@@ -196,79 +247,32 @@
   <div class="banner rodape">Spotify</div>
 
   <script>
+    // Perguntas e artistas na ordem solicitada:
     const perguntas = [
       {
         artista: "Matuê",
         img: "https://i.pinimg.com/originals/2c/b1/d0/2cb1d0dff5e2d7d9cbe06ca9e1c5a3a5.jpg",
-        perguntas: [
-          {
-            texto: "Recomendaria Matuê para algum parente?",
-            opcoes: ["Sim", "Não", "Talvez"]
-          },
-          {
-            texto: "Qual faixa etária você acha que mais escuta o cantor Matuê?",
-            opcoes: ["-18 anos", "+18 anos", "Todas as idades"]
-          },
-          {
-            texto: "Você escuta Matuê diariamente?",
-            opcoes: ["Raramente", "De vez em quando", "Todo dia"]
-          }
-        ]
+        texto: "Qual faixa etária você acha que mais escuta o cantor Matuê?",
+        opcoes: ["-18 anos", "+18 anos", "Todas as idades"]
       },
       {
         artista: "MC IG",
         img: "https://i.pinimg.com/originals/55/59/bb/5559bb92991c0b2baf684f6b4f7d42a4.jpg",
-        perguntas: [
-          {
-            texto: "Recomendaria MC IG para algum parente?",
-            opcoes: ["Sim", "Não", "Talvez"]
-          },
-          {
-            texto: "Qual faixa etária você acha que mais escuta MC IG?",
-            opcoes: ["-18 anos", "+18 anos", "Todas as idades"]
-          },
-          {
-            texto: "Você escuta MC IG diariamente?",
-            opcoes: ["Raramente", "De vez em quando", "Todo dia"]
-          }
-        ]
+        texto: "Você recomendaria MC IG para um amigo?",
+        opcoes: ["Sim", "Não", "Talvez"]
       },
       {
         artista: "MC Kevinho",
         img: "https://i.pinimg.com/originals/6a/eb/fd/6aebfd72ed5907c0630e382e29a9db79.jpg",
-        perguntas: [
-          {
-            texto: "Recomendaria MC Kevinho para algum parente?",
-            opcoes: ["Sim", "Não", "Talvez"]
-          },
-          {
-            texto: "Qual faixa etária você acha que mais escuta MC Kevinho?",
-            opcoes: ["-18 anos", "+18 anos", "Todas as idades"]
-          },
-          {
-            texto: "Você escuta MC Kevinho diariamente?",
-            opcoes: ["Raramente", "De vez em quando", "Todo dia"]
-          }
-        ]
+        texto: "Com que frequência você escuta MC Kevinho?",
+        opcoes: ["Raramente", "Às vezes", "Sempre"]
       },
       {
         artista: "Luan Santana",
         img: "https://i.pinimg.com/originals/c1/3b/19/c13b191ee270ffb1e6b22b20a8a6b6a9.jpg",
-        perguntas: [
-          {
-            texto: "Recomendaria Luan Santana para algum parente?",
-            opcoes: ["Sim", "Não", "Talvez"]
-          },
-          {
-            texto: "Qual faixa etária você acha que mais escuta Luan Santana?",
-            opcoes: ["-18 anos", "+18 anos", "Todas as idades"]
-          },
-          {
-            texto: "Você escuta Luan Santana diariamente?",
-            opcoes: ["Raramente", "De vez em quando", "Todo dia"]
-          }
-        ]
+        texto: "Você acha que Luan Santana é popular entre jovens?",
+        opcoes: ["Sim", "Não", "Mais entre adultos"]
       },
       {
         artista: "Ludmilla",
-        img: "https://i.pinimg.com/originals/63/fb/59/63fb59210a523b8
+        img: "https://i.pinimg.com/originals/63/fb/59/63fb59210a523b8e417
